# CFDCourse24

./: .gitignore  CMakeLists.txt  cfdcourse.html  howto.txt  readme.md  winbuild64.bat
doc/: Doxyfile  Untitled 1.ods  convert_from_maxima.py  descr.md  grades_1q.ods  howto.md  howto.txt  install.md  latex_base.tex  main_page.md  notes.md  tasks.md  themes.md
doc/html/: _form0.eps  _formulas.dvi  a_8md.html  annotated.html  annotated_dup.js  cfd24_8hpp.html  cfd24_8hpp.js  cfd24_8hpp_source.html  cfd__common_8hpp.html  cfd__common_8hpp.js  cfd__common_8hpp__dep__incl.map  cfd__common_8hpp__dep__incl.md5  cfd__common_8hpp__incl.map  cfd__common_8hpp__incl.md5  cfd__common_8hpp_source.html  classAmgcMatrixSolver-members.html  classAmgcMatrixSolver.html  classTestPoisson1Worker-members.html  classTestPoisson1Worker.html  classcfd_1_1AmgcMatrixSolver-members.html  classcfd_1_1AmgcMatrixSolver.html  classcfd_1_1AmgcMatrixSolver.js  classcfd_1_1CsrMatrix-members.html  classcfd_1_1CsrMatrix.html  classcfd_1_1CsrMatrix.js  classcfd_1_1CsrMatrix__inherit__graph.map  classcfd_1_1CsrMatrix__inherit__graph.md5  classcfd_1_1CsrStencil-members.html  classcfd_1_1CsrStencil.html  classcfd_1_1CsrStencil.js  classcfd_1_1CsrStencil__inherit__graph.map  classcfd_1_1CsrStencil__inherit__graph.md5  classcfd_1_1DenseMatrix-members.html  classcfd_1_1DenseMatrix.html  classcfd_1_1DenseMatrix.js  classcfd_1_1DenseMatrix__inherit__graph.map  classcfd_1_1DenseMatrix__inherit__graph.md5  classcfd_1_1Grid1D-members.html  classcfd_1_1Grid1D.html  classcfd_1_1Grid1D.js  (+337 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_25.js  all_26.js  all_27.js  all_28.js  all_29.js  all_2a.js  all_2b.js  all_2c.js  all_2e.js  all_2f.js  all_3.js  all_32.js  all_4.js  all_5.js  all_6.js  all_7.js  (+78 more)
doc/lectures/: .gitignore  Makefile  clisting.py  clisting.tex  eq-basis.tex  eq-geometry.tex  eq-partint.tex  eq-vectors.tex  howto-build.tex  howto-git.tex  howto-hybmesh.tex  howto-paraview.tex  latex_defs.tex  lect01.tex  lect02.tex  lect03.tex  lect04.tex  lect05.tex  lect06.tex  lect07.tex  lect08.tex  lect09.tex  lect10.tex  lect11.tex  lect12.tex  lect13.tex  lect14.tex  lect15.tex  lect16.tex  lect17.tex  lect18.tex  lect19.tex  lectures.fdb_latexmk  lectures.fls  lectures.tex  sub3.tex
doc/lectures/geo/: fvm2d.ggb  fvm3d.ggb  lagrange_poly1d.ggb  lagrange_poly_linquad.ggb  lagrange_poly_lintri.ggb  lagrange_poly_quadtri.ggb  mtp.ggb  polygon_area.ggb  quadrangle_basis_points.ggb  triangle_basis_points.ggb
src/: CMakeLists.txt
src/cfd24/: CMakeLists.txt  cfd24.cpp  cfd24.hpp  cfd_common.hpp  macros.hpp
src/cfd24/debug/: printer.cpp  printer.hpp  saver.cpp  saver.hpp  tictoc.cpp  tictoc.hpp
src/cfd24/fem/: fem_assembler.cpp  fem_assembler.hpp  fem_element.hpp  fem_numeric_integrals.cpp  fem_numeric_integrals.hpp  fem_sorted_cell_info.cpp  fem_sorted_cell_info.hpp
src/cfd24/fem/elem1d/: segment_cubic.cpp  segment_cubic.hpp  segment_linear.cpp  segment_linear.hpp  segment_quadratic.cpp  segment_quadratic.hpp
src/cfd24/fem/elem2d/: quadrangle_linear.cpp  quadrangle_linear.hpp  quadrangle_quadratic.cpp  quadrangle_quadratic.hpp  triangle_cubic.cpp  triangle_cubic.hpp  triangle_linear.cpp  triangle_linear.hpp  triangle_quadratic.cpp  triangle_quadratic.hpp
src/cfd24/fvm/: fvm_assembler.cpp  fvm_assembler.hpp  fvm_dpdn_boundary.cpp  fvm_dpdn_boundary.hpp
src/cfd24/geom/: i_point_function.hpp  jacobi.cpp  jacobi.hpp  point.hpp  primitives.hpp  searcher.cpp  searcher.hpp  simplex.cpp  simplex.hpp
src/cfd24/grid/: grid1d.cpp  grid1d.hpp  i_grid.cpp  i_grid.hpp  regular_grid2d.cpp  regular_grid2d.hpp  unstructured_grid2d.cpp  unstructured_grid2d.hpp  vtk.cpp  vtk.hpp
src/cfd24/mat/: csrmat.cpp  csrmat.hpp  densemat.cpp  densemat.hpp  i_mat.hpp  i_sparse_mat.hpp  lodmat.cpp  lodmat.hpp  matrix_solver.cpp  matrix_solver.hpp  sparse_matrix_solver.cpp  sparse_matrix_solver.hpp
src/cfd24/numeric_integration/: quadrature.cpp  quadrature.hpp  segment_quadrature.cpp  segment_quadrature.hpp  square_quadrature.cpp  square_quadrature.hpp  triangle_quadrature.cpp  triangle_quadrature.hpp
src/test/: .cfd24_test.cpp.swo  CMakeLists.txt  cavern_2d_fem_cbs_test.cpp  cavern_2d_fem_simple_test.cpp  cavern_2d_fvm_simple_test.cpp  cavern_2d_simple_test.cpp  cfd24_test.cpp  cfd24_test.hpp  convdiff_fem_test.cpp  cylinder_fvm_simple_test.cpp  fvm_gradient_test.cpp  geom_test.cpp  grid_test.cpp  interp_test.cpp  linear_2d_simple_test.cpp  mat_test.cpp  obstacle_2d_simple_test.cpp  obstacle_nonstat_2d_simple_test.cpp  poiseuille_2d_simple_test.cpp  poisson_fem_solve_test.cpp  poisson_fem_solve_test.cpp~  poisson_fvm_solve_test.cpp  poisson_hermite_solve_test.cpp  poisson_solve_test.cpp  transport_fem_solve_test.cpp  transport_fem_solve_test_pq.cpp  transport_solve_test.cpp
src/test/utils/: filesystem.cpp  filesystem.hpp  vecmat.cpp  vecmat.hpp
test_data/: cylgrid.py  cylgrid_5k.vtk  hexagrid.py  hexagrid.vtk  hexagrid_1.vtk  hexagrid_500.vtk  pebigrid.py  pebigrid.vtk  pebigrid_from_win.vtk  tetragrid.py  tetragrid.vtk  tetragrid5000.vtk  tetragrid_500.vtk  trigrid.py  trigrid.vtk  trigrid_500.vtk
